@@ -196,6 +196,8 @@
 #define LLVM_VERSION "@LLVM_VERSION_FULL@"
 #endif
 
+#define LLVM_VERIFY_MODULE_DEFAULT @LLVM_VERIFY_MODULE_DEFAULT@
+
 #endif
 
 
