@@ -1,3 +1,5 @@
+.. _pocl-install:
+
 ============
 Installation
 ============
